deleted files, changed html

--- a/Buckaroos/war/index.html
+++ b/Buckaroos/war/index.html
@@ -10,7 +10,7 @@
         
     </head>
     
-    <body background="/images/lines.png">
+    <body>
  
         <div class = "navbar navbar-greenverse navbar-static-top">
             <div class = "container">
