non clickable link, deleteaccount

--- a/Buckaroos/war/index.html
+++ b/Buckaroos/war/index.html
@@ -15,7 +15,7 @@
         <div class = "navbar navbar-greenverse navbar-static-top">
             <div class = "container">
                            
-                <a href = "#" class = "navbar-brand">buckaroos</a>
+                <a>buckaroos</a>
         	</div>
         </div>
 
