--- a/Buckaroos/war/index.html
+++ b/Buckaroos/war/index.html
@@ -12,7 +12,7 @@
     
     <body>
  
-        <div class = "navbar navbar-greenverse navbar-static-top">
+        <div class = "navbar navbar-glassbar navbar-static-top">
             <div class = "container">
                            
                 <a class = "navbar-brand">buckaroos</a>
